<resources>
    <string name="app_name">Love To Run</string>
    <string name="title_activity_start">Start Run</string>
    <string name="title_activity_search">Map</string>
    <string name="title_activity_start_tabs">Start Run</string>
    <string name="title_activity_help">Do you need my help?</string>

    <!-- main activity strings-->
    <string name="start">START RUN</string>
    <string name="make">MAKE RUN</string>

    <!-- make activity strings-->
    <string name="hintTextView">Length route</string>
    <string name="goalButton">Save Goal!</string>
    <string name="goalEditText">Enter goal in km</string>
    <string name="saveRouteButton">Save Route!</string>
    <string name="saveGoalToast">Goal Saved!</string>
    <string name="routeSavedToast">Route Saved!</string>
    <string name="lengthRouteTextView">Length route: %s</string>
    <string name="calcRouteTextView">Calculating route!</string>

    <!-- help activity strings-->
    <string name="helpButton">help</string>
    <string name="helpTitle">How to make a good route?</string>
    <string name="helpText"> The very first marker is already placed for you on the map
        on your current location. This is the place where the route will start.
        You can of course delete this marker by clicking on it. And choose another starting point.</string>
    <string name="helpText2"> If there are some places which you want to see during your run,
        you can add a marker at that spot. To make a good route, it is handy to place your markers
        mostly at intersection points of the streets. You will see immediately the length of the
        route between the markers and this app will automatically calculate the distance back to your
        starting point and draw a line. It is also possible to drag your marker and put it somewhere
        else on the map. Your route will be drawn in the order of the set markers.
        Do not forget to enter your goal to see this while you are running. </string>
    <string name="helpText3"> If you still have some questions, contact me!
        Click on the info button for more contact info.</string>

    <!-- first tab strings-->
    <string name="action_settings">Go to musicplayer</string>
    <string name="goalTextView">Your goal is:</string>
    <string name="currRunDistTextView">Runned distance:</string>
    <string name="goalSetText">%s km</string>
    <string name="svnotfound">StreetView is not available for this location</string>
    <string name="btnNext">btnNext</string>
    <string name="btnStop">btnStop</string>
    <string name="btnPlay">btnPlay</string>
    <string name="btnBack">btnBack</string>
    <string name="btnShuffle">btnShuffle</string>
    <string name="totalDurText">total</string>
    <string name="currDurText">0:00</string>
    <string name="songTitleText">SongTitle</string>
    <string name="currDistTextFirst">0 km</string>
</resources>
