<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hasine.project.mprog.run.Search">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/goalEditText"
            android:id="@+id/editText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goalButton"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@+id/editText"
            android:onClick="saveGoal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"
            android:text="@string/hintTextView"
            android:id="@+id/textView"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/saveRouteButton"
            android:background="@android:color/transparent"
            android:id="@+id/saveRouteButton"
            android:onClick="saveRoute"/>
    </RelativeLayout>
</fragment>


